ServiceSLA/force-app/main/default/objects/SLA_Policy__mdt/SLA_Policy__mdt.object-meta.xml
<CustomObject>
    <label>SLA Policy</label>
    <pluralLabel>SLA Policies</pluralLabel>
</CustomObject>