ServiceSLA/force-app/main/default/objects/SLA_Policy__mdt/fields/Resolution_Target_Hours__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Target_Hours__c</fullName>
    <label>Resolution Target (Hours)</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>