ServiceSLA/force-app/main/default/objects/SLA_Policy__mdt/fields/Response_Target_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Response_Target_Minutes__c</fullName>
    <label>Response Target (Minutes)</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>