ServiceSLA/force-app/main/default/objects/SLA_Policy__mdt/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <description>Matches the Case Service Tier value (Platinum / Gold / Standard).</description>
</CustomField>